added actual components

--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -1,19 +1,9 @@
-/* Шрифты:
-font-family: 'Raleway', sans-serif;
-font-family: 'Roboto', sans-serif; */
-/*
 :root {
-   --main-font: 'Roboto', sans-serif;
-
-   /* для лого: */
-   --secondary-font: 'Raleway', sans-serif;
-
-   --accent-color: #2196f3;
-   --title-color: #212121;
-   --text-color: #757575;
-
-   --bgc-main: #2f303a;
-   --bgc-secondary: #f5f4fa;
-
-   --card-gap: 30px;
-} */
+   --black-color: #111518;
+   --orange-color: #ff6b09;
+   --white-color: #ffffff;
+   --grey-bcg-color: #f1f1f1;
+   --grey-color: #b9b9b9;
+   --mob-grey-color: #3d3d3d;
+   --bcg-section: #e5e5e5;
+}
