--- a/css/main.css
+++ b/css/main.css
@@ -1,19 +1,10 @@
+html {
+  box-sizing: border-box;
+}
+
 body {
-  color: #000000;
-  font-family: var(--main-font);
-  background-color: #ffffff;
-}
-
-body.is-blocked {
-  overflow: hidden;
-}
-
-.list {
-  list-style: none;
-}
-
-.link {
-  text-decoration: none;
+  font-family: 'Montserrat', sans-serif;
+  margin: 0;
 }
 
 h1,
@@ -24,39 +15,32 @@ h5,
 h6,
 p {
   margin: 0;
+  padding: 0;
+}
+
+.list {
+  list-style: none;
 }
 
 ul,
 ol {
-  margin: 0;
   padding: 0;
+  margin: 0;
 }
 
-img {
+a {
+  text-decoration: none;
+}
+
+img,
+svg {
   display: block;
-  max-width: 100%;
 }
 
-.adress {
-  font-style: normal;
-}
-
-.wrapper {
-  margin: 100px;
-  background-color: #cccccc;
-  outline: 1px solid #000000;
-  width: 100%;
-  height: 400px;
-}
-
-.wrapper .btn {
-  margin-top: 200px;
-}
-
-.logo,
-.logo--tablet-menu,
-.logo--mobile,
-.logo--mobile-menu {
+.hero .logo,
+.hero .logo--tablet-menu,
+.hero .logo--mobile,
+.hero .logo--mobile-menu {
   display: block;
 }
 /*# sourceMappingURL=main.css.map */
