--- a/sass/base/_commons.scss
+++ b/sass/base/_commons.scss
@@ -1,16 +1,16 @@
+html {
+   box-sizing: border-box;
+}
+
+// *,
+// *::before,
+// *::after {
+//   box-sizing: inherit;
+// }
+
 body {
-   color: #000000;
-   font-family: var(--main-font);
-   background-color: #ffffff;
-   &.is-blocked {
-      overflow: hidden;
-   }
-}
-.list {
-   list-style: none;
-}
-.link {
-   text-decoration: none;
+   font-family: 'Montserrat', sans-serif;
+   margin: 0;
 }
 
 h1,
@@ -21,16 +21,23 @@ h5,
 h6,
 p {
    margin: 0;
-}
-ul,
-ol {
-   margin: 0;
    padding: 0;
 }
-img {
-   display: block;
-   max-width: 100%;
+
+.list {
+   list-style: none;
 }
-.adress {
-   font-style: normal;
+
+ul,
+ol {
+   padding: 0;
+   margin: 0;
+}
+
+a {
+   text-decoration: none;
+}
+img,
+svg {
+   display: block;
 }
