--- a/sass/components/_title.scss
+++ b/sass/components/_title.scss
@@ -1,16 +1,39 @@
 /*
-.title {
-   font-size: 28px;
-   line-height: 1.179;
+   Для применения стилей навесить на заголовок секции класс .title или .title--white для белого заголовка.
+Пример:
+<section class="about">
+   <h2 class="title">Это заголовок секции</h2>
+...
+</section>
+<section class="about">
+   <h2 class="title--white">Это заголовок белого цвета</h2>
+...
+</section>
+*/
+
+.title,
+.title--white {
+   font-family: 'Montserrat', sans-serif;
+   font-style: normal;
+   font-weight: 800;
+   font-size: 20px;
+   line-height: 1.3;
    text-align: center;
    letter-spacing: 0.03em;
-   font-weight: 700;
-   text-align: center;
-   letter-spacing: 0.03em;
-   color: var(--title-color);
-   @media screen and (min-width: 1200px) {
-      font-size: 36px;
-      line-height: 1.166;
+
+   @media screen and (min-width: 768px) {
+      font-size: 26px;
+      line-height: 1.3;
+   }
+
+   @media screen and (min-width: 1344px) {
+      font-size: 46px;
+      line-height: 1.3;
    }
 }
-*/
+.title {
+   color: var(--black-color);
+}
+.title--white {
+   color: var(--white-color);
+}
