--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,69 +2,11 @@
 // font-family: 'Montserrat', sans-serif;
 @import './base/commons';
 
-.wrapper {
-   margin: 100px;
-   background-color: #cccccc;
-   outline: 1px solid #000000;
-   width: 100%;
-   height: 400px;
-
-   .btn {
-      margin-top: 200px;
+.hero {
+   .logo,
+   .logo--tablet-menu,
+   .logo--mobile,
+   .logo--mobile-menu {
+      display: block;
    }
-}
-// стили для desktop и tablet
-// .logo,
-// .logo--tablet-menu,
-// .logo--mobile,
-// .logo--mobile-menu {
-//    display: block;
-//    width: 128px;
-//    font-family: 'Montserrat', sans-serif;
-//    &__header {
-//       font-weight: 800;
-//       font-size: 26px;
-//       line-height: 1.23;
-//       letter-spacing: 0.04em;
-//       color: #111518;
-
-//       margin-bottom: 4px;
-
-//       display: flex;
-//       justify-content: space-between;
-//    }
-//    &__icon {
-//       width: 22px;
-//       height: 30px;
-//    }
-//    &__footer {
-//       font-weight: 700;
-//       font-size: 8px;
-//       line-height: 1.25;
-//       letter-spacing: 0.18em;
-//       text-transform: uppercase;
-//       color: #111518;
-//       &--left {
-//          color: #ff6b09;
-//       }
-//    }
-// }
-
-// // стили для tablet-menu
-// .logo--tablet-menu {
-//    &__header {
-//       color: #ffffff;
-//    }
-//    &__footer {
-//       &--right {
-//          color: #ffffff;
-//       }
-//    }
-// }
-
-.logo,
-.logo--tablet-menu,
-.logo--mobile,
-.logo--mobile-menu {
-   display: block;
 }
