--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,20 @@
-// Шрифт:
-// font-family: 'Montserrat', sans-serif;
-@import './base/commons';
+// base
+@import './base/common';
+
+// components
+@import './components/button';
+@import './components/title';
+// layout
+//@import './layout/garant';
+// @import './layout/footer';
+// @import './layout/header';
+// @import './layout/hero';
+//@import './layout/how-we-do-it';
+@import './layout/hero';
+
+// utils
+@import './utils/container';
+@import './utils/variables';
 
 .hero {
    .logo,
