--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 html {
   box-sizing: border-box;
 }
@@ -35,6 +36,225 @@ a {
 img,
 svg {
   display: block;
+}
+
+.btn {
+  display: block;
+  cursor: pointer;
+  width: 260px;
+  height: 48px;
+  background-color: var(--orange-color);
+  border: 2px solid transparent;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 1.25;
+  letter-spacing: 0.08em;
+  text-transform: uppercase;
+  color: var(--white-color);
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (min-width: 1344px) {
+  .btn {
+    width: 354px;
+    height: 70px;
+    font-size: 14px;
+    line-height: 1.214;
+    letter-spacing: 0.14em;
+  }
+}
+
+.btn:hover, .btn:focus {
+  color: var(--orange-color);
+  border: 2px solid var(--orange-color);
+  background-color: transparent;
+  transform: scale(1.02);
+}
+
+.header .btn {
+  color: var(--orange-color);
+  border: 2px solid var(--orange-color);
+  background-color: transparent;
+}
+
+@media screen and (min-width: 1344px) {
+  .header .btn {
+    width: 336px;
+  }
+}
+
+.header .btn:hover, .header .btn:focus {
+  color: var(--white-color);
+  border: 2px solid transparent;
+  background-color: var(--orange-color);
+  transform: scale(1.02);
+}
+
+/*
+   Для применения стилей навесить на заголовок секции класс .title или .title--white для белого заголовка.
+Пример:
+<section class="about">
+   <h2 class="title">Это заголовок секции</h2>
+...
+</section>
+<section class="about">
+   <h2 class="title--white">Это заголовок белого цвета</h2>
+...
+</section>
+*/
+.title,
+.title--white {
+  font-family: 'Montserrat', sans-serif;
+  font-style: normal;
+  font-weight: 800;
+  font-size: 20px;
+  line-height: 1.3;
+  text-align: center;
+  letter-spacing: 0.03em;
+}
+
+@media screen and (min-width: 768px) {
+  .title,
+  .title--white {
+    font-size: 26px;
+    line-height: 1.3;
+  }
+}
+
+@media screen and (min-width: 1344px) {
+  .title,
+  .title--white {
+    font-size: 46px;
+    line-height: 1.3;
+  }
+}
+
+.title {
+  color: var(--black-color);
+}
+
+.title--white {
+  color: var(--white-color);
+}
+
+.hero .logo,
+.hero .logo--tablet-menu,
+.hero .logo--mobile,
+.hero .logo--mobile-menu {
+  display: block;
+}
+
+.hero {
+  max-width: 1680px;
+  margin: 0 auto;
+}
+
+.hero__top {
+  height: 618px;
+  padding-top: 109.5px;
+  background-image: url(../images/girls.png), url(../images/bg-line-mobile.png);
+  background-size: 208px 177.5px, auto auto;
+  background-position: center bottom 47px, top -25px left;
+  background-repeat: no-repeat, no-repeat;
+  margin-bottom: -25px;
+  padding-bottom: 25px;
+}
+
+.hero__title {
+  font-weight: 800;
+  font-size: 20px;
+  line-height: 1.36;
+  letter-spacing: 0.03em;
+  color: var(--black-color);
+  margin-bottom: 30px;
+}
+
+.hero__top-promo {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.57;
+  letter-spacing: 0.08em;
+  color: var(--grey-color);
+}
+
+.hero__bottom-promo {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.57;
+  letter-spacing: 0.08em;
+  color: var(--black-color);
+  margin-bottom: 30px;
+}
+
+.hero__bottom-promo span {
+  color: var(--orange-color);
+}
+
+.hero__bottom {
+  height: 50px;
+  outline: 1px solid #000;
+}
+
+.hero .container {
+  height: 100%;
+}
+
+.hero .btn {
+  margin: 0 auto;
+}
+
+@media screen and (min-width: 768px) {
+  .hero {
+    max-width: 768px;
+  }
+  .hero__top {
+    height: 556.5px;
+    padding-top: 158px;
+    background-image: url(../images/girls.png), url(../images/bg-line-mobile.png);
+    background-size: 208px 177.5px, auto auto;
+    background-position: center bottom 47px, top -25px left;
+    background-repeat: no-repeat, no-repeat;
+    margin-bottom: -25px;
+    padding-bottom: 25px;
+  }
+}
+
+.container {
+  max-width: 320px;
+  padding-right: 20px;
+  padding-left: 20px;
+  margin: 0 auto;
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    max-width: 768px;
+    padding-right: 40px;
+    padding-left: 40px;
+  }
+}
+
+@media screen and (min-width: 1344px) {
+  .container {
+    max-width: 1344px;
+    padding-right: 15px;
+    padding-left: 15px;
+  }
+}
+
+:root {
+  --black-color: #111518;
+  --orange-color: #ff6b09;
+  --white-color: #ffffff;
+  --grey-bcg-color: #f1f1f1;
+  --grey-color: #b9b9b9;
+  --mob-grey-color: #3d3d3d;
+  --bcg-section: #e5e5e5;
 }
 
 .hero .logo,
