--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -11,19 +11,26 @@
    max-width: 1680px;
    margin: 0 auto;
 
-   // .hero__top
-   &__top {
-      height: 618px;
-      padding-top: 109.5px;
-
-      background-image: url(../images/girls.png),
-         url(../images/bg-line-mobile.png);
-      background-size: 208px 177.5px, auto auto;
-      background-position: center bottom 47px, top -25px left;
-      background-repeat: no-repeat, no-repeat;
+   //hero__wrapper
+   &__wrapper {
+      background-image: url(../../images/bg-line-mobile.png);
+      background-size: cover;
+      background-position: center bottom -25px;
+      background-repeat: no-repeat;
 
       margin-bottom: -25px;
       padding-bottom: 25px;
+   }
+
+   // .hero__body
+   &__body {
+      height: 618px;
+      padding-top: 109.5px;
+
+      background-image: url(../../images/girl-mobile.png);
+      background-size: 208px 177.5px;
+      background-position: center bottom 47px;
+      background-repeat: no-repeat;
    }
 
    // .hero__title
@@ -63,37 +70,117 @@
       }
    }
 
-   // .hero__bottom
-
-   &__bottom {
-      height: 50px;
-      outline: 1px solid #000;
-   }
    .container {
       height: 100%;
    }
    .btn {
-      margin: 0 auto;
+      margin-right: auto;
+      margin-left: auto;
    }
 }
 
 // for tablet, min-width=768px
 @media screen and (min-width: 768px) {
    .hero {
-      max-width: 768px;
-      // .hero__top
-      &__top {
-         height: 556.5px;
-         padding-top: 158px;
-
-         background-image: url(../images/girls.png),
-            url(../images/bg-line-mobile.png);
-         background-size: 208px 177.5px, auto auto;
-         background-position: center bottom 47px, top -25px left;
-         background-repeat: no-repeat, no-repeat;
+      //hero__wrapper
+      &__wrapper {
+         background-image: url(../../images/bg-line-tablet.png);
+         background-size: cover;
+         background-position: center bottom -25px;
+         background-repeat: no-repeat;
 
          margin-bottom: -25px;
          padding-bottom: 25px;
       }
+
+      // .hero__body
+      &__body {
+         height: 556.5px;
+         padding-top: 158px;
+
+         background-image: url(../../images/girl-tablet.png);
+         background-size: 376px 320px;
+         background-position: right bottom 64px;
+         background-repeat: no-repeat;
+
+         margin-right: -22px;
+         padding-right: 22px;
+      }
+
+      // .hero__title
+      &__title {
+         font-size: 26px;
+         line-height: 1.3;
+
+         margin-bottom: 30px;
+         max-width: 285px;
+      }
+      // .hero__bottom-promo
+      &__bottom-promo {
+         max-width: 285px;
+      }
+      .btn {
+         margin-left: 0;
+      }
+   }
+}
+
+// for desktop, min-width=1344px
+// @media screen and (min-width: 1344px) {
+//    .hero {
+//       //hero__wrapper
+//       &__wrapper {
+//          background-image: url(../../images/bg-line-desktop.png);
+//          background-size: cover;
+//          background-position: center bottom -10px;
+//          background-repeat: no-repeat;
+
+//          margin-bottom: -10px;
+//          padding-bottom: 10px;
+//       }
+
+//       // .hero__body
+//       &__body {
+//          height: 878px;
+//          padding-top: 228.5px;
+
+//          background-image: url(../../images/girl-desktop.png);
+//          background-size: 842px 718px;
+//          background-position: right bottom 10px;
+//          background-repeat: no-repeat;
+
+//          margin-right: -137px;
+//          padding-right: 137px;
+//       }
+
+//       // .hero__title
+//       &__title {
+//          font-size: 58px;
+
+//          margin-bottom: 24px;
+//          max-width: 640px;
+//       }
+
+//       // .hero__top-promo
+//       &__top-promo {
+//          font-size: 20px;
+//          line-height: 1.65%;
+//       }
+
+//       // .hero__bottom-promo
+//       &__bottom-promo {
+//          max-width: 600px;
+//          margin-bottom: 40px;
+
+//          font-size: 20px;
+//          line-height: 1.65%;
+//       }
+//    }
+// }
+
+.about {
+   .container {
+      border: 1px solid #000;
+      margin-bottom: 50px;
    }
 }
