--- a/css/main.css
+++ b/css/main.css
@@ -154,15 +154,22 @@ svg {
   margin: 0 auto;
 }
 
-.hero__top {
-  height: 618px;
-  padding-top: 109.5px;
-  background-image: url(../images/girls.png), url(../images/bg-line-mobile.png);
-  background-size: 208px 177.5px, auto auto;
-  background-position: center bottom 47px, top -25px left;
-  background-repeat: no-repeat, no-repeat;
+.hero__wrapper {
+  background-image: url(../../images/bg-line-mobile.png);
+  background-size: cover;
+  background-position: center bottom -25px;
+  background-repeat: no-repeat;
   margin-bottom: -25px;
   padding-bottom: 25px;
+}
+
+.hero__body {
+  height: 618px;
+  padding-top: 109.5px;
+  background-image: url(../../images/girl-mobile.png);
+  background-size: 208px 177.5px;
+  background-position: center bottom 47px;
+  background-repeat: no-repeat;
 }
 
 .hero__title {
@@ -195,33 +202,51 @@ svg {
   color: var(--orange-color);
 }
 
-.hero__bottom {
-  height: 50px;
-  outline: 1px solid #000;
-}
-
 .hero .container {
   height: 100%;
 }
 
 .hero .btn {
-  margin: 0 auto;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 @media screen and (min-width: 768px) {
-  .hero {
-    max-width: 768px;
-  }
-  .hero__top {
-    height: 556.5px;
-    padding-top: 158px;
-    background-image: url(../images/girls.png), url(../images/bg-line-mobile.png);
-    background-size: 208px 177.5px, auto auto;
-    background-position: center bottom 47px, top -25px left;
-    background-repeat: no-repeat, no-repeat;
+  .hero__wrapper {
+    background-image: url(../../images/bg-line-tablet.png);
+    background-size: cover;
+    background-position: center bottom -25px;
+    background-repeat: no-repeat;
     margin-bottom: -25px;
     padding-bottom: 25px;
   }
+  .hero__body {
+    height: 556.5px;
+    padding-top: 158px;
+    background-image: url(../../images/girl-tablet.png);
+    background-size: 376px 320px;
+    background-position: right bottom 64px;
+    background-repeat: no-repeat;
+    margin-right: -22px;
+    padding-right: 22px;
+  }
+  .hero__title {
+    font-size: 26px;
+    line-height: 1.3;
+    margin-bottom: 30px;
+    max-width: 285px;
+  }
+  .hero__bottom-promo {
+    max-width: 285px;
+  }
+  .hero .btn {
+    margin-left: 0;
+  }
+}
+
+.about .container {
+  border: 1px solid #000;
+  margin-bottom: 50px;
 }
 
 .container {
