--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -9,16 +9,13 @@
 
 .hero {
    max-width: 1900px;
-   // padding: 0 100px;
    margin: 0 auto;
-
    //hero__wrapper
    &__wrapper {
-      background-image: url(../../images/girl-mobile.png),
-         url(../../images/bg-line-mobile.png);
-      background-size: 208px 177.5px, cover;
-      background-position: center bottom 47px, center bottom -25px;
-      background-repeat: no-repeat, no-repeat;
+      background-image: url(../../images/bg-line-mobile.png);
+      background-size: cover;
+      background-position: center bottom -25px;
+      background-repeat: no-repeat;
 
       margin-bottom: -25px;
       padding-bottom: 25px;
@@ -28,6 +25,11 @@
    &__body {
       height: 618px;
       padding-top: 109.5px;
+
+      // background-image: url(../../images/girl-mobile.png);
+      // background-size: 208px 177.5px;
+      // background-position: center bottom 47px;
+      // background-repeat: no-repeat;
    }
 
    // .hero__title
@@ -69,6 +71,11 @@
 
    .container {
       height: 100%;
+
+      background-image: url(../../images/girl-mobile.png);
+      background-size: 208px 177.5px;
+      background-position: center bottom 47px;
+      background-repeat: no-repeat;
    }
    .btn {
       margin-right: auto;
@@ -76,27 +83,35 @@
    }
 }
 
-// for tablet, min-width=768px
+// for tablet, min-width=768px ------------------------------------------------------------------
 @media screen and (min-width: 768px) {
    .hero {
+      .container {
+         background-image: url(../../images/girl-tablet.png);
+         background-size: 376px 320px;
+         background-position: right 18px bottom 64px;
+         background-repeat: no-repeat;
+      }
       //hero__wrapper
       &__wrapper {
-         background-image: url(../../images/girl-tablet.png),
-            url(../../images/bg-line-tablet.png);
-         background-size: 376px 320px, cover;
-         background-position: right bottom 64px, center bottom -25px;
-         background-repeat: no-repeat, no-repeat;
+         background-image: url(../../images/bg-line-tablet.png);
+         background-size: cover;
+         background-position: center bottom -10px;
+         background-repeat: no-repeat;
 
-         margin-bottom: -25px;
-         padding-bottom: 25px;
-         // margin-right: -22px;
-         // padding-right: 22px;
+         margin-bottom: -10px;
+         padding-bottom: 10px;
       }
 
       // .hero__body
       &__body {
          height: 556.5px;
          padding-top: 158px;
+
+         // background-image: url(../../images/girl-tablet.png);
+         // background-size: 376px 320px;
+         // background-position: right 18px bottom 64px;
+         // background-repeat: no-repeat;
       }
 
       // .hero__title
@@ -117,35 +132,35 @@
    }
 }
 
-// for desktop, min-width=1344px
+// for desktop, min-width=1344px ----------------------------------------------------------------
 @media screen and (min-width: 1344px) {
    .hero {
-      // .container {
-      //    max-width: 1688;
-      //    padding-left: 187px;
-      //    padding-left: 187px;
-      //    margin: 0 auto;
-      // }
-      // min-width: 1688px;
-      //hero__wrapper
+      .container {
+         background-image: url(../../images/girl-desktop.png);
+         background-size: 842px 718px;
+         background-position: right -120px bottom 20px;
+         background-repeat: no-repeat;
+      }
+
       &__wrapper {
-         background-image: url(../../images/girl-desktop.png),
-            url(../../images/bg-line-desktop.png);
-         background-size: 842px 718px, cover;
-         background-position: right 18px bottom 20px, center bottom -10px;
-         background-repeat: no-repeat, no-repeat;
+         background-image: url(../../images/bg-line-desktop.png);
+         background-size: cover;
+         background-position: center bottom -10px;
+         background-repeat: no-repeat;
 
          margin-bottom: -10px;
          padding-bottom: 10px;
-
-         // margin-right: -137px;
-         // padding-right: 137px;
       }
 
       // .hero__body
       &__body {
          height: 950px;
          padding-top: 228.5px;
+
+         // background-image: url(../../images/girl-desktop.png);
+         // background-size: 842px 718px;
+         // background-position: right -120px bottom 20px;
+         // background-repeat: no-repeat;
       }
 
       // .hero__title
@@ -173,6 +188,20 @@
    }
 }
 
+@media screen and (min-width: 1688px) {
+   .hero {
+      .container {
+         max-width: 1688px;
+         padding-left: 183px;
+         padding-right: 183px;
+         background-position: right bottom 20px;
+      }
+      // &__body {
+      //    background-position: right bottom 20px;
+      // }
+   }
+}
+
 .about {
    .container {
       border: 1px solid #000;
@@ -183,5 +212,9 @@
    width: 100%;
    height: 50px;
    background-color: tomato;
+}
+.green {
+   height: 100px;
+   background-color: green;
 }
 //added comment
