--- a/css/main.css
+++ b/css/main.css
@@ -142,6 +142,89 @@ svg {
   color: var(--white-color);
 }
 
+.header {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+}
+
+.header__body {
+  height: 89px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header__menu {
+  margin-left: auto;
+}
+
+.logo__image {
+  width: 80px;
+  height: 28px;
+}
+
+.menu__list {
+  list-style: none;
+}
+
+@media screen and (min-width: 1344px) {
+  .menu__list {
+    display: flex;
+  }
+}
+
+.burger {
+  width: 30px;
+  height: 20px;
+  background-color: red;
+}
+
+@media screen and (max-width: 767px) {
+  .logo {
+    display: none;
+  }
+  .logo-menu-tablet {
+    display: none;
+  }
+  .header__menu {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 0 20px;
+  }
+  .header__menu .mobile-menu {
+    height: 89px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
+  }
+  .header__menu .logo-menu-tablet {
+    display: none;
+  }
+  .header__menu .logo-menu-mobile__image {
+    display: block;
+    width: 80px;
+    height: 28px;
+  }
+  .header__menu .burger-close {
+    width: 30px;
+    height: 20px;
+    background-color: #3cff00;
+  }
+  .header__menu .menu {
+    margin-bottom: 50px;
+  }
+  .header__menu .btn {
+    margin: 0 auto;
+  }
+}
+
 .hero .logo,
 .hero .logo--tablet-menu,
 .hero .logo--mobile,
