--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,6 +10,7 @@
 // @import './layout/header';
 // @import './layout/hero';
 //@import './layout/how-we-do-it';
+@import './layout/header';
 @import './layout/hero';
 
 // utils
