--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -4,8 +4,9 @@
    top: 0;
    left: 0;
    width: 100%;
+   // background-color: transparent;
+   background-color: tomato;
 
-   // .header__body
    &__body {
       height: 89px;
 
@@ -14,7 +15,6 @@
       align-items: center;
    }
 
-   // .header__menu
    &__menu {
       // display: flex;
       margin-left: auto;
@@ -23,16 +23,12 @@
 .container {
 }
 .logo {
-   // .logo__image
-
    &__image {
       width: 80px;
       height: 28px;
    }
 }
 .menu {
-   // .menu__list
-
    &__list {
       list-style: none;
       @media screen and (min-width: 1344px) {
@@ -40,22 +36,36 @@
       }
    }
 
-   // .menu__item
-
    &__item {
    }
-
-   // .menu__link
+   &__item:not(:last-child) {
+      // margin-bottom: 10px;
+   }
 
    &__link {
+      font-weight: 800;
+      font-size: 20px;
+      line-height: 1.8;
+      letter-spacing: 0.03em;
+      color: var(--white-color);
+   }
+   &__link:hover,
+   &__link:focus {
+      color: var(--orange-color);
    }
 }
-.btn {
+.menu-button {
+   display: inline-flex;
+   margin: 0;
+   padding: 0;
+   border: none;
+   background-color: transparent;
 }
-.burger {
-   width: 30px;
-   height: 20px;
-   background-color: red;
+.burger-open {
+   width: 21px;
+   height: 14px;
+   // background-color: red;
+   // background-image: url(../../images/menu.svg);
 }
 
 @media screen and (max-width: 767px) {
@@ -67,13 +77,13 @@
    }
    .header__menu {
       position: fixed;
-      left: 0;
+      left: -50%;
       top: 0;
       width: 100%;
       height: 100%;
-      background-color: rgba(0, 0, 0, 0.5);
+      background-color: rgba(17, 21, 24, 0.9);
 
-      padding: 0 20px;
+      // padding: 0 20px;
 
       .mobile-menu {
          height: 89px;
@@ -87,8 +97,6 @@
          display: none;
       }
       .logo-menu-mobile {
-         // .logo__image
-
          &__image {
             display: block;
             width: 80px;
@@ -96,9 +104,10 @@
          }
       }
       .burger-close {
-         width: 30px;
-         height: 20px;
-         background-color: rgb(60, 255, 0);
+         width: 17px;
+         height: 17px;
+         // background-color: rgb(60, 255, 0);
+         // background-image: url(../../images/close.svg);
       }
 
       .menu {
