--- a/css/main.css
+++ b/css/main.css
@@ -147,7 +147,7 @@ svg {
   top: 0;
   left: 0;
   width: 100%;
-  background-color: tomato;
+  background-color: transparent;
 }
 
 .header__body {
@@ -161,19 +161,8 @@ svg {
   margin-left: auto;
 }
 
-.logo__image {
-  width: 80px;
-  height: 28px;
-}
-
 .menu__list {
   list-style: none;
-}
-
-@media screen and (min-width: 1344px) {
-  .menu__list {
-    display: flex;
-  }
 }
 
 .menu__link {
@@ -182,6 +171,7 @@ svg {
   line-height: 1.8;
   letter-spacing: 0.03em;
   color: var(--white-color);
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .menu__link:hover, .menu__link:focus {
@@ -201,20 +191,39 @@ svg {
   height: 14px;
 }
 
+.burger-close {
+  width: 17px;
+  height: 17px;
+}
+
 @media screen and (max-width: 767px) {
   .logo {
     display: none;
   }
+  .logo__image {
+    width: 80px;
+    height: 28px;
+  }
+  .logo-mobile {
+    display: block;
+  }
   .logo-menu-tablet {
     display: none;
   }
+  .logo-menu-mobile {
+    display: block;
+  }
   .header__menu {
     position: fixed;
-    left: -50%;
+    left: -100%;
     top: 0;
     width: 100%;
     height: 100%;
     background-color: rgba(17, 21, 24, 0.9);
+    transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .header__menu.is-open {
+    left: 0;
   }
   .header__menu .mobile-menu {
     height: 89px;
@@ -223,23 +232,106 @@ svg {
     align-items: center;
     margin-bottom: 20px;
   }
-  .header__menu .logo-menu-tablet {
-    display: none;
-  }
-  .header__menu .logo-menu-mobile__image {
-    display: block;
-    width: 80px;
-    height: 28px;
-  }
-  .header__menu .burger-close {
-    width: 17px;
-    height: 17px;
-  }
   .header__menu .menu {
     margin-bottom: 50px;
   }
   .header__menu .btn {
     margin: 0 auto;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1343px) {
+  .header__body {
+    height: 128px;
+  }
+  .logo {
+    display: block;
+  }
+  .logo__image {
+    width: 128px;
+    height: 45px;
+  }
+  .logo-mobile {
+    display: none;
+  }
+  .logo-menu-tablet {
+    display: block;
+  }
+  .logo-menu-mobile {
+    display: none;
+  }
+  .header__menu-tablet {
+    position: fixed;
+    left: -100%;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(17, 21, 24, 0.9);
+    transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .header__menu-tablet.is-open {
+    left: 0;
+  }
+  .header__menu-tablet .mobile-menu {
+    height: 128px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 30px;
+  }
+  .header__menu .btn {
+    margin-right: 40px;
+  }
+  .menu__link {
+    font-size: 26px;
+  }
+}
+
+@media screen and (min-width: 1344px) {
+  .header__body {
+    height: 130px;
+  }
+  .logo {
+    display: block;
+  }
+  .logo__image {
+    width: 128px;
+    height: 45px;
+  }
+  .logo-mobile {
+    display: none;
+  }
+  .logo-menu-tablet {
+    display: none;
+  }
+  .logo-menu-mobile {
+    display: none;
+  }
+  .menu-button {
+    display: none;
+  }
+  .menu__link {
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.214;
+    text-transform: uppercase;
+    color: var(--grey-color);
+  }
+  .menu__list {
+    display: flex;
+  }
+  .menu__item:not(:last-child) {
+    margin-right: 40px;
+  }
+  .header__menu {
+    display: flex;
+    align-items: center;
+  }
+  .header__menu .container {
+    padding: 0;
+  }
+  .header__menu .btn {
+    margin-left: 60px;
   }
 }
 
