--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -4,8 +4,7 @@
    top: 0;
    left: 0;
    width: 100%;
-   // background-color: transparent;
-   background-color: tomato;
+   background-color: transparent;
 
    &__body {
       height: 89px;
@@ -16,30 +15,13 @@
    }
 
    &__menu {
-      // display: flex;
       margin-left: auto;
    }
 }
-.container {
-}
-.logo {
-   &__image {
-      width: 80px;
-      height: 28px;
-   }
-}
+
 .menu {
    &__list {
       list-style: none;
-      @media screen and (min-width: 1344px) {
-         display: flex;
-      }
-   }
-
-   &__item {
-   }
-   &__item:not(:last-child) {
-      // margin-bottom: 10px;
    }
 
    &__link {
@@ -48,6 +30,7 @@
       line-height: 1.8;
       letter-spacing: 0.03em;
       color: var(--white-color);
+      transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
    }
    &__link:hover,
    &__link:focus {
@@ -61,29 +44,44 @@
    border: none;
    background-color: transparent;
 }
+
 .burger-open {
    width: 21px;
    height: 14px;
-   // background-color: red;
-   // background-image: url(../../images/menu.svg);
+}
+.burger-close {
+   width: 17px;
+   height: 17px;
 }
 
 @media screen and (max-width: 767px) {
    .logo {
       display: none;
+      &__image {
+         width: 80px;
+         height: 28px;
+      }
+   }
+   .logo-mobile {
+      display: block;
    }
    .logo-menu-tablet {
       display: none;
    }
+   .logo-menu-mobile {
+      display: block;
+   }
    .header__menu {
       position: fixed;
-      left: -50%;
+      left: -100%;
       top: 0;
       width: 100%;
       height: 100%;
       background-color: rgba(17, 21, 24, 0.9);
-
-      // padding: 0 20px;
+      transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+      &.is-open {
+         left: 0;
+      }
 
       .mobile-menu {
          height: 89px;
@@ -93,22 +91,6 @@
 
          margin-bottom: 20px;
       }
-      .logo-menu-tablet {
-         display: none;
-      }
-      .logo-menu-mobile {
-         &__image {
-            display: block;
-            width: 80px;
-            height: 28px;
-         }
-      }
-      .burger-close {
-         width: 17px;
-         height: 17px;
-         // background-color: rgb(60, 255, 0);
-         // background-image: url(../../images/close.svg);
-      }
 
       .menu {
          margin-bottom: 50px;
@@ -116,5 +98,103 @@
       .btn {
          margin: 0 auto;
       }
+   }
+}
+@media screen and (min-width: 768px) and (max-width: 1343px) {
+   .header__body {
+      height: 128px;
+   }
+   .logo {
+      display: block;
+      &__image {
+         width: 128px;
+         height: 45px;
+      }
+   }
+   .logo-mobile {
+      display: none;
+   }
+   .logo-menu-tablet {
+      display: block;
+   }
+   .logo-menu-mobile {
+      display: none;
+   }
+   .header__menu-tablet {
+      position: fixed;
+      left: -100%;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(17, 21, 24, 0.9);
+      transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+      &.is-open {
+         left: 0;
+      }
+      .mobile-menu {
+         height: 128px;
+         display: flex;
+         justify-content: space-between;
+         align-items: center;
+
+         margin-bottom: 30px;
+      }
+   }
+   .header__menu {
+      .btn {
+         margin-right: 40px;
+      }
+   }
+
+   .menu__link {
+      font-size: 26px;
+   }
+}
+@media screen and (min-width: 1344px) {
+   .header__body {
+      height: 130px;
+   }
+   .logo {
+      display: block;
+      &__image {
+         width: 128px;
+         height: 45px;
+      }
+   }
+   .logo-mobile {
+      display: none;
+   }
+   .logo-menu-tablet {
+      display: none;
+   }
+   .logo-menu-mobile {
+      display: none;
+   }
+
+   .menu-button {
+      display: none;
+   }
+   .menu__link {
+      font-weight: 700;
+      font-size: 14px;
+      line-height: 1.214;
+      text-transform: uppercase;
+      color: var(--grey-color);
+   }
+   .menu__list {
+      display: flex;
+   }
+   .menu__item:not(:last-child) {
+      margin-right: 40px;
+   }
+   .header__menu {
+      .container {
+         padding: 0;
+      }
+      .btn {
+         margin-left: 60px;
+      }
+      display: flex;
+      align-items: center;
    }
 }
