--- a/css/main.css
+++ b/css/main.css
@@ -348,10 +348,10 @@ svg {
 }
 
 .hero__wrapper {
-  background-image: url(../../images/girl-mobile.png), url(../../images/bg-line-mobile.png);
-  background-size: 208px 177.5px, cover;
-  background-position: center bottom 47px, center bottom -25px;
-  background-repeat: no-repeat, no-repeat;
+  background-image: url(../../images/bg-line-mobile.png);
+  background-size: cover;
+  background-position: center bottom -25px;
+  background-repeat: no-repeat;
   margin-bottom: -25px;
   padding-bottom: 25px;
 }
@@ -393,6 +393,10 @@ svg {
 
 .hero .container {
   height: 100%;
+  background-image: url(../../images/girl-mobile.png);
+  background-size: 208px 177.5px;
+  background-position: center bottom 47px;
+  background-repeat: no-repeat;
 }
 
 .hero .btn {
@@ -401,13 +405,19 @@ svg {
 }
 
 @media screen and (min-width: 768px) {
+  .hero .container {
+    background-image: url(../../images/girl-tablet.png);
+    background-size: 376px 320px;
+    background-position: right 18px bottom 64px;
+    background-repeat: no-repeat;
+  }
   .hero__wrapper {
-    background-image: url(../../images/girl-tablet.png), url(../../images/bg-line-tablet.png);
-    background-size: 376px 320px, cover;
-    background-position: right bottom 64px, center bottom -25px;
-    background-repeat: no-repeat, no-repeat;
-    margin-bottom: -25px;
-    padding-bottom: 25px;
+    background-image: url(../../images/bg-line-tablet.png);
+    background-size: cover;
+    background-position: center bottom -10px;
+    background-repeat: no-repeat;
+    margin-bottom: -10px;
+    padding-bottom: 10px;
   }
   .hero__body {
     height: 556.5px;
@@ -428,11 +438,17 @@ svg {
 }
 
 @media screen and (min-width: 1344px) {
+  .hero .container {
+    background-image: url(../../images/girl-desktop.png);
+    background-size: 842px 718px;
+    background-position: right -120px bottom 20px;
+    background-repeat: no-repeat;
+  }
   .hero__wrapper {
-    background-image: url(../../images/girl-desktop.png), url(../../images/bg-line-desktop.png);
-    background-size: 842px 718px, cover;
-    background-position: right 18px bottom 20px, center bottom -10px;
-    background-repeat: no-repeat, no-repeat;
+    background-image: url(../../images/bg-line-desktop.png);
+    background-size: cover;
+    background-position: center bottom -10px;
+    background-repeat: no-repeat;
     margin-bottom: -10px;
     padding-bottom: 10px;
   }
@@ -457,6 +473,15 @@ svg {
   }
 }
 
+@media screen and (min-width: 1688px) {
+  .hero .container {
+    max-width: 1688px;
+    padding-left: 183px;
+    padding-right: 183px;
+    background-position: right bottom 20px;
+  }
+}
+
 .about .container {
   border: 1px solid #000;
   margin-bottom: 50px;
@@ -466,6 +491,11 @@ svg {
   width: 100%;
   height: 50px;
   background-color: tomato;
+}
+
+.green {
+  height: 100px;
+  background-color: green;
 }
 
 .container {
