--- a/css/main.css
+++ b/css/main.css
@@ -347,7 +347,7 @@ svg {
   margin: 0 auto;
 }
 
-.hero__wrapper {
+.hero__top {
   background-image: url(../../images/bg-line-mobile.png);
   background-size: cover;
   background-position: center bottom -25px;
@@ -404,6 +404,30 @@ svg {
   margin-left: auto;
 }
 
+.hero__bottom {
+  margin-top: 30px;
+  margin-bottom: 50px;
+}
+
+.hero__list {
+  list-style: none;
+  max-width: 240px;
+  margin: 0 auto;
+}
+
+.hero__item {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.43;
+  letter-spacing: 0.08em;
+  color: var(--black-color);
+  padding-left: 70px;
+}
+
+.hero__item:not(:last-child) {
+  margin-bottom: 30px;
+}
+
 @media screen and (min-width: 768px) {
   .hero .container {
     background-image: url(../../images/girl-tablet.png);
@@ -411,7 +435,7 @@ svg {
     background-position: right 18px bottom 64px;
     background-repeat: no-repeat;
   }
-  .hero__wrapper {
+  .hero__top {
     background-image: url(../../images/bg-line-tablet.png);
     background-size: cover;
     background-position: center bottom -10px;
@@ -444,7 +468,7 @@ svg {
     background-position: right -120px bottom 20px;
     background-repeat: no-repeat;
   }
-  .hero__wrapper {
+  .hero__top {
     background-image: url(../../images/bg-line-desktop.png);
     background-size: cover;
     background-position: center bottom -10px;
