--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -19,6 +19,15 @@
 
       margin-bottom: -25px;
       padding-bottom: 25px;
+
+      .container {
+         height: 100%;
+
+         background-image: url(../../images/girl-mobile.png);
+         background-size: 208px 177.5px;
+         background-position: center bottom 47px;
+         background-repeat: no-repeat;
+      }
    }
 
    // .hero__body
@@ -69,14 +78,6 @@
       }
    }
 
-   .container {
-      height: 100%;
-
-      background-image: url(../../images/girl-mobile.png);
-      background-size: 208px 177.5px;
-      background-position: center bottom 47px;
-      background-repeat: no-repeat;
-   }
    .btn {
       margin-right: auto;
       margin-left: auto;
@@ -87,7 +88,7 @@
    }
    &__list {
       list-style: none;
-      max-width: 240px;
+      width: 240px;
       margin: 0 auto;
    }
    &__item {
@@ -98,6 +99,26 @@
       color: var(--black-color);
 
       padding-left: 70px;
+
+      &:nth-child(1) {
+         background-image: url(../../images/student.svg),
+            url(../../images/rectangle.svg);
+         background-position: left 13px center, left center;
+         background-repeat: no-repeat, no-repeat;
+      }
+      &:nth-child(2) {
+         background-image: url(../../images/mobile_learning.svg),
+            url(../../images/rectangle.svg);
+         background-position: left 10px center, left center;
+         background-repeat: no-repeat, no-repeat;
+      }
+      &:nth-child(3) {
+         background-image: url(../../images/insurance.svg),
+            url(../../images/rectangle.svg);
+         background-position: left 12px center, left center;
+         background-repeat: no-repeat, no-repeat;
+      }
+
       &:not(:last-child) {
          margin-bottom: 30px;
       }
@@ -107,12 +128,6 @@
 // for tablet, min-width=768px ------------------------------------------------------------------
 @media screen and (min-width: 768px) {
    .hero {
-      .container {
-         background-image: url(../../images/girl-tablet.png);
-         background-size: 376px 320px;
-         background-position: right 18px bottom 64px;
-         background-repeat: no-repeat;
-      }
       //hero__wrapper
       &__top {
          background-image: url(../../images/bg-line-tablet.png);
@@ -122,6 +137,13 @@
 
          margin-bottom: -10px;
          padding-bottom: 10px;
+
+         .container {
+            background-image: url(../../images/girl-tablet.png);
+            background-size: 376px 320px;
+            background-position: right 18px bottom 64px;
+            background-repeat: no-repeat;
+         }
       }
 
       // .hero__body
@@ -150,19 +172,45 @@
       .btn {
          margin-left: 0;
       }
+
+      &__bottom {
+         margin-top: 30px;
+         margin-bottom: 50px;
+      }
+      &__list {
+         list-style: none;
+         width: 100%;
+         height: 60px;
+
+         display: flex;
+         align-items: center;
+         margin-left: -30px;
+         margin-top: -30px;
+      }
+      &__item {
+         font-weight: 700;
+         font-size: 14px;
+         line-height: 1.43;
+         letter-spacing: 0.08em;
+         color: var(--black-color);
+
+         padding-left: 70px;
+         margin-left: 30px;
+         margin-top: 30px;
+
+         flex-basis: calc(100% / 3 - 30px);
+
+         &:not(:last-child) {
+            margin-bottom: 0;
+         }
+         max-width: 215px;
+      }
    }
 }
 
 // for desktop, min-width=1344px ----------------------------------------------------------------
 @media screen and (min-width: 1344px) {
    .hero {
-      .container {
-         background-image: url(../../images/girl-desktop.png);
-         background-size: 842px 718px;
-         background-position: right -120px bottom 20px;
-         background-repeat: no-repeat;
-      }
-
       &__top {
          background-image: url(../../images/bg-line-desktop.png);
          background-size: cover;
@@ -171,6 +219,13 @@
 
          margin-bottom: -10px;
          padding-bottom: 10px;
+
+         .container {
+            background-image: url(../../images/girl-desktop.png);
+            background-size: 842px 718px;
+            background-position: right -120px bottom 20px;
+            background-repeat: no-repeat;
+         }
       }
 
       // .hero__body
