--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -10,9 +10,8 @@
 .hero {
    max-width: 1900px;
    margin: 0 auto;
-   //hero__wrapper
    &__top {
-      background-image: url(../../images/bg-line-mobile.png);
+      background-image: url(../images/bg-line-mobile.png);
       background-size: cover;
       background-position: center bottom -25px;
       background-repeat: no-repeat;
@@ -23,25 +22,16 @@
       .container {
          height: 100%;
 
-         background-image: url(../../images/girl-mobile.png);
+         background-image: url(../images/girl-mobile.png);
          background-size: 208px 177.5px;
          background-position: center bottom 47px;
          background-repeat: no-repeat;
       }
    }
-
-   // .hero__body
    &__body {
       height: 618px;
       padding-top: 109.5px;
-
-      // background-image: url(../../images/girl-mobile.png);
-      // background-size: 208px 177.5px;
-      // background-position: center bottom 47px;
-      // background-repeat: no-repeat;
    }
-
-   // .hero__title
 
    &__title {
       font-weight: 800;
@@ -53,8 +43,6 @@
       margin-bottom: 30px;
    }
 
-   // .hero__top-promo
-
    &__top-promo {
       font-weight: 500;
       font-size: 14px;
@@ -62,8 +50,6 @@
       letter-spacing: 0.08em;
       color: var(--grey-color);
    }
-
-   // .hero__bottom-promo
 
    &__bottom-promo {
       font-weight: 700;
@@ -105,22 +91,22 @@
       align-items: center;
 
       &:nth-child(1) {
-         background-image: url(../../images/student.svg),
-            url(../../images/rectangle.svg);
+         background-image: url(../images/student.svg),
+            url(../images/rectangle.svg);
          background-position: left 13px center, left center;
          background-repeat: no-repeat, no-repeat;
          background-size: auto auto, 58px 60px;
       }
       &:nth-child(2) {
-         background-image: url(../../images/mobile_learning.svg),
-            url(../../images/rectangle.svg);
+         background-image: url(../images/mobile_learning.svg),
+            url(../images/rectangle.svg);
          background-position: left 10px center, left center;
          background-repeat: no-repeat, no-repeat;
          background-size: auto auto, 58px 60px;
       }
       &:nth-child(3) {
-         background-image: url(../../images/insurance.svg),
-            url(../../images/rectangle.svg);
+         background-image: url(../images/insurance.svg),
+            url(../images/rectangle.svg);
          background-position: left 12px center, left center;
          background-repeat: no-repeat, no-repeat;
          background-size: auto auto, 58px 60px;
@@ -135,9 +121,8 @@
 // for tablet, min-width=768px ------------------------------------------------------------------
 @media screen and (min-width: 768px) {
    .hero {
-      //hero__wrapper
       &__top {
-         background-image: url(../../images/bg-line-tablet.png);
+         background-image: url(../images/bg-line-tablet.png);
          background-size: cover;
          background-position: center bottom -10px;
          background-repeat: no-repeat;
@@ -146,25 +131,16 @@
          padding-bottom: 10px;
 
          .container {
-            background-image: url(../../images/girl-tablet.png);
+            background-image: url(../images/girl-tablet.png);
             background-size: 376px 320px;
             background-position: right 18px bottom 64px;
             background-repeat: no-repeat;
          }
       }
-
-      // .hero__body
       &__body {
          height: 556.5px;
          padding-top: 158px;
-
-         // background-image: url(../../images/girl-tablet.png);
-         // background-size: 376px 320px;
-         // background-position: right 18px bottom 64px;
-         // background-repeat: no-repeat;
       }
-
-      // .hero__title
       &__title {
          font-size: 26px;
          line-height: 1.3;
@@ -172,7 +148,6 @@
          margin-bottom: 30px;
          max-width: 285px;
       }
-      // .hero__bottom-promo
       &__bottom-promo {
          max-width: 285px;
       }
@@ -207,7 +182,7 @@
 @media screen and (min-width: 1344px) {
    .hero {
       &__top {
-         background-image: url(../../images/bg-line-desktop.png);
+         background-image: url(../images/bg-line-desktop.png);
          background-size: cover;
          background-position: center bottom -10px;
          background-repeat: no-repeat;
@@ -216,39 +191,27 @@
          padding-bottom: 10px;
 
          .container {
-            background-image: url(../../images/girl-desktop.png);
+            background-image: url(../images/girl-desktop.png);
             background-size: 842px 718px;
             background-position: right -120px bottom 20px;
             background-repeat: no-repeat;
          }
       }
 
-      // .hero__body
       &__body {
          height: 950px;
          padding-top: 228.5px;
-
-         // background-image: url(../../images/girl-desktop.png);
-         // background-size: 842px 718px;
-         // background-position: right -120px bottom 20px;
-         // background-repeat: no-repeat;
       }
-
-      // .hero__title
       &__title {
          font-size: 58px;
 
          margin-bottom: 24px;
          max-width: 640px;
       }
-
-      // .hero__top-promo
       &__top-promo {
          font-size: 20px;
          line-height: 1.65;
       }
-
-      // .hero__bottom-promo
       &__bottom-promo {
          max-width: 640px;
          margin-bottom: 40px;
@@ -298,9 +261,6 @@
          padding-right: 183px;
          background-position: right bottom 20px;
       }
-      // &__body {
-      //    background-position: right bottom 20px;
-      // }
    }
 }
 
@@ -319,4 +279,3 @@
    height: 100px;
    background-color: green;
 }
-//added comment
