add code for retina pictures

--- a/css/main.css
+++ b/css/main.css
@@ -358,7 +358,7 @@ svg {
 
 .hero__top .container {
   height: 100%;
-  background-image: url(../images/girl-mobile.png);
+  background-image: url(../images/girls-mobile.png);
   background-size: 208px 177.5px;
   background-position: center bottom 47px;
   background-repeat: no-repeat;
@@ -452,6 +452,15 @@ svg {
   margin-bottom: 30px;
 }
 
+@media screen and (min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
+  .hero__top {
+    background-image: url(../images/bg-line-mobile@2x.png);
+  }
+  .hero__top .container {
+    background-image: url(../images/girls-mobile@2x.png);
+  }
+}
+
 @media screen and (min-width: 768px) {
   .hero__top {
     background-image: url(../images/bg-line-tablet.png);
@@ -462,7 +471,7 @@ svg {
     padding-bottom: 10px;
   }
   .hero__top .container {
-    background-image: url(../images/girl-tablet.png);
+    background-image: url(../images/girls-tablet.png);
     background-size: 376px 320px;
     background-position: right 18px bottom 64px;
     background-repeat: no-repeat;
@@ -502,6 +511,15 @@ svg {
   }
 }
 
+@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
+  .hero__top {
+    background-image: url(../images/bg-line-tablet@2x.png);
+  }
+  .hero__top .container {
+    background-image: url(../images/girls-tablet@2x.png);
+  }
+}
+
 @media screen and (min-width: 1344px) {
   .hero__top {
     background-image: url(../images/bg-line-desktop.png);
@@ -512,7 +530,7 @@ svg {
     padding-bottom: 10px;
   }
   .hero__top .container {
-    background-image: url(../images/girl-desktop.png);
+    background-image: url(../images/girls-desktop.png);
     background-size: 842px 718px;
     background-position: right -120px bottom 20px;
     background-repeat: no-repeat;
@@ -561,6 +579,15 @@ svg {
   .hero__item:nth-child(3) {
     background-position: left 24px center, left center;
     background-size: 42px 48px, 100px 102px;
+  }
+}
+
+@media screen and (min-width: 1344px) and (min-device-pixel-ratio: 2), screen and (min-width: 1344px) and (min-resolution: 192dpi), screen and (min-width: 1344px) and (min-resolution: 2dppx) {
+  .hero__top {
+    background-image: url(../images/bg-line-desktop@2x.png);
+  }
+  .hero__top .container {
+    background-image: url(../images/girls-desktop@2x.png);
   }
 }
 
