--- a/css/main.css
+++ b/css/main.css
@@ -335,13 +335,6 @@ svg {
   }
 }
 
-.hero .logo,
-.hero .logo--tablet-menu,
-.hero .logo--mobile,
-.hero .logo--mobile-menu {
-  display: block;
-}
-
 .hero {
   max-width: 1900px;
   margin: 0 auto;
@@ -600,22 +593,6 @@ svg {
   }
 }
 
-.about .container {
-  border: 1px solid #000;
-  margin-bottom: 50px;
-}
-
-.box {
-  width: 100%;
-  height: 50px;
-  background-color: tomato;
-}
-
-.green {
-  height: 100px;
-  background-color: green;
-}
-
 .container {
   max-width: 320px;
   padding-right: 20px;
@@ -647,5 +624,54 @@ svg {
   --grey-color: #b9b9b9;
   --mob-grey-color: #3d3d3d;
   --bcg-section: #e5e5e5;
+}
+
+.wrapper {
+  margin: 50px;
+  height: 150px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.logo {
+  display: inline-flex;
+  position: relative;
+  transform: scale(3);
+}
+
+.letters {
+  width: 128px;
+  height: 45px;
+}
+
+.fire {
+  width: 22px;
+  height: 30px;
+  position: absolute;
+  top: 0;
+  left: 48%;
+  transform-origin: bottom center;
+  animation-name: flame;
+  animation-duration: 1500ms;
+  animation-iteration-count: infinite;
+}
+
+@keyframes flame {
+  0% {
+    fill: #ff5e00;
+    transform: rotate(0deg);
+  }
+  25% {
+    transform: translateY(-3px) rotate(7deg);
+  }
+  50% {
+    fill: #ff6b09;
+    transform: translateY(-3px);
+  }
+  100% {
+    transform: rotate(0deg);
+    fill: orangered;
+  }
 }
 /*# sourceMappingURL=main.css.map */
