--- a/sass/main.scss
+++ b/sass/main.scss
@@ -59,7 +59,7 @@
    50% {
       //   transform: rotate(7deg);
       fill: #ff6b09;
-      transform: translateY(-3px) rotate(3deg);
+      transform: translateY(-3px) rotate(7deg) scale(0.95);
    }
 
    100% {
